# LithoGPT-2

./: .gitignore  README.md  Untitled.ipynb  fallback_cap.patch  lithogpt2_g1_evidence.sha256  nlog_precrawl.patch  pyproject.toml  requirements.txt
.githooks/: pre-commit
configs/: mnemonic_aliases.yaml
docs/: AGENT_HANDOFF_STATE_2026-07-04.md  BENCHMARK.md  DATASET_CARD.md  DECISIONS_LOG.md  EXECUTION_PLAN_v2.md  FEASIBILITY_ASSESSMENT.md  G2_MILESTONE_REPORT.md  G2_freeze_plan.md  G2_progress_report.md  HANDOFF.md  HANDOFF_CONTINUING_AGENT.md  KGS_ACCESS.md  LICENSE_MATRIX.md  NLOG_ACCESS.md  OPERATING_RULES.md  POD_RUNBOOK_G1.md  POSITIONING.md  PROJECT_DOSSIER.md  basinshift_env_2026-07-20.txt  finding_nlog_resistivity_coverage.md  freeze_closure_env_2026-07-20.txt  fsq_6p3_diag_env_2026-07-23.txt  g1_evidence_sha256.txt  milestone_G1_nlog.md  tsfm_stage1_adaptation.md  tsfm_stage1_env_2026-07-20.txt  tsfm_stage1_env_2026-07-21.txt
reports/: README.md  force2020_coverage.csv  kgs_coverage.csv  kgs_failures.csv  kgs_qc_records.csv  kgs_sentinel_clean_report.md  kgs_unmapped_mnemonics.csv  nlog_coverage.csv  nlog_failures.csv  nlog_orphan_quarantine.csv  nlog_qc_records.csv  nlog_unmapped_mnemonics.csv  stageA_split_inputs.md  status_g1.md  status_kgs.md  status_kgs_qc.md  status_week1.md  status_wo01.md  unmapped_mnemonics.csv
scripts/: build_manifest.py  build_splits.py  ci_status.py  combine_qc.py  commit_and_push.py  commit_splitgen.py  compute_frozen_norm_stats.py  derive_42_decomposition.py  derive_failure_bridge.py  derive_nlog_disposition.py  g1_report.py  (+22 more)
(+123 files in other folders)
