[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lithogpt2"
version = "0.1.0"
description = "Open, physics-gated well-log foundation model pipeline, QC suite, and cross-basin benchmark."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ammar Falah Hasan Al Saeedi" }]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "lasio>=0.31",
  "scipy>=1.11",
  "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[project.scripts]
lithogpt2-ingest-force2020 = "lithogpt2.ingest.force2020:main"
lithogpt2-ingest-nlog = "lithogpt2.ingest.nlog:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]  # asserts are fine in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "E501"]
